# dicely-done

./: .gitignore  CMakeLists.txt  README.md  logparser.py  protocol.md  rules.md
android-client/: .gitignore
android-client/app/: build.gradle  proguard-rules.pro
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/res/drawable/: die_bg_rect.xml  die_bg_selected.xml  divider_vertical.xml  roundedrect.xml
android-client/app/src/main/res/drawable-w360dp/: die_bg_rect.xml  die_bg_selected.xml
android-client/app/src/main/res/layout/: activity_poker_game.xml  activity_start_game.xml  fragment_betting_round.xml  fragment_chip_info.xml  fragment_end_game.xml  fragment_hand_info.xml  fragment_players.xml  fragment_rolling_round.xml  fragment_round_1.xml  view_player.xml  (+2 more)
android-client/app/src/main/res/layout-small/: fragment_waiting_screen.xml
android-client/app/src/main/res/layout-w360dp/: activity_start_game.xml
experiments/: analysis.r  logparser.py  parse-answers.sh  raw2csv.awk  raw2csv.sh
experiments/data/: answers.csv  real-dice-freq.csv  real-dice_times.csv  real-time.csv  virtual-dice-freq.csv  virtual-time.csv
icedice/: CMakeLists.txt
icedice/include/: circles.h  circles.hpp  extra.hpp  faces.hpp  icedice.h  icedice.hpp  shapes.hpp  squares.h  squares.hpp
icedice/src/: circles.cpp  extra.cpp  faces.cpp  icedice.cpp  shapes.cpp  squares.cpp
server/include/: connection.hpp  connection.hpp~  game.hpp  hand.hpp  magic.h  player.hpp
server/src/: connection.cpp  game.cpp  hand.cpp  player.cpp  server.cpp
src/: circles.cpp
(+38 files in other folders)
